--- a/app/wp-content/themes/main-theme/style.css
+++ b/app/wp-content/themes/main-theme/style.css
@@ -2480,7 +2480,51 @@ body textarea:required:valid {
   color: #666; }
 
 body {
-  background-color: black; }
+  font-family: Tinos; }
+
+.align-c {
+  text-align: center; }
+
+.align-r {
+  text-align: right; }
+
+.align-l {
+  text-align: left; }
+
+.h2-main {
+  font-size: 48px;
+  color: #111111; }
+
+section {
+  padding: 100px 0px; }
+
+.m-15 {
+  margin: 15px; }
+
+.height-100 {
+  height: 100%; }
+
+.width-100 {
+  width: 100%; }
+
+div.desc-text {
+  color: #555150;
+  margin-top: 25px;
+  margin-bottom: 50px; }
+
+div.service-wrapper {
+  height: 350px;
+  margin: 15px 0;
+  background-color: #555150; }
+  div.service-wrapper div.service-value {
+    height: 100px;
+    background-color: #111111; }
+    div.service-wrapper div.service-value div.service-text {
+      color: #ffffff;
+      font-size: 32px; }
+
+div.service-wrapper:hover div.service-value div.service-text {
+  color: #e2b733; }
 
 /*==========  Desktop First Method  ==========*/
 /* Large Devices, Wide Screens */
