--- a/sass/main-style/style.sass
+++ b/sass/main-style/style.sass
@@ -57,7 +57,10 @@ section
 .width-100
 	width: 100%
 
-// Main Page
+// Main Page (start)
+
+// Our services (start)
+
 
 div.desc-text
 	color: $sub-gray
@@ -80,6 +83,28 @@ div.service-wrapper:hover
 	div.service-value
 		div.service-text
 			color: $gold
+
+// Our services (finish)
+
+
+
+
+// Main Page (finish)
+
+
+// FOOTER (start)
+
+div.heading-footer-cont
+	font-family: Montserrat
+	font-size: 32px
+	font-weight: bold
+	line-height: 2.03
+	letter-spacing: 0.8px
+	text-align: center
+	text-transform: uppercase
+	color: $gold
+
+// FOOTER (finish)
 
 //ALWAYS END
 @import "../media"
