--- a/sass/main-style/style.sass
+++ b/sass/main-style/style.sass
@@ -103,6 +103,21 @@ div.heading-footer-cont
 	text-align: center
 	text-transform: uppercase
 	color: $gold
+	margin-bottom: 45px
+	span.heading-footer-cont-value
+		border-bottom: 1px solid $gold
+
+div.contact-icon i:after
+	content: ''
+	width: 100px
+	height: 100px 
+	border: 1px solid $gray-border
+	border-radius: 50%
+	text-align: center
+	vertical-align: middle
+	display: inline-block
+	position: relative
+
 
 // FOOTER (finish)
 
