--- a/sass/main-style/style.sass
+++ b/sass/main-style/style.sass
@@ -212,6 +212,17 @@ div.cont-i-wrapper
 			background-position: 97% 50%
 			outline: 1px solid $gold
 
+#sub-footer
+	height: 40px
+	padding: 10px 0px
+	background-color: #161515
+	div.sub-footer-wrapper-text
+		text-align: center
+		div.sub-footer-value-text
+			font-size: 14px
+			font-family: Nunito
+			color: $gray-border
+
 			
 
 // FOOTER (finish)
