--- a/app/wp-content/themes/main-theme/style.css
+++ b/app/wp-content/themes/main-theme/style.css
@@ -2544,7 +2544,13 @@ div.service-wrapper:hover div.service-value div.service-text {
     .container-fluid.main-header.default div.logo-head a.custom-logo-link img.custom-logo {
       width: 360px !important;
       height: 120px !important;
-      z-index: 100; }
+      z-index: 100;
+      -webkit-transition: all 0.5s ease;
+      transition: all 0.5s ease; }
+    .container-fluid.main-header.default div.logo-head a.custom-logo-link img.custom-logo-mini {
+      display: none;
+      -webkit-transition: all 0.5s ease;
+      transition: all 0.5s ease; }
   .container-fluid.main-header.default div.cont-info-header {
     color: #ffffff;
     height: 100px;
@@ -2633,10 +2639,17 @@ div.service-wrapper:hover div.service-value div.service-text {
   z-index: 200; }
   .container-fluid.main-header.fixed div.logo-head {
     z-index: 100; }
-    .container-fluid.main-header.fixed div.logo-head a.custom-logo-link img.custom-logo.mini {
-      width: 135px !important;
-      height: 45px !important;
-      z-index: 100; }
+    .container-fluid.main-header.fixed div.logo-head a.custom-logo-link img.custom-logo-mini {
+      width: 400px !important;
+      height: 40px !important;
+      margin-left: 15px;
+      z-index: 100;
+      -webkit-transition: all 0.5s ease;
+      transition: all 0.5s ease; }
+    .container-fluid.main-header.fixed div.logo-head a.custom-logo-link img.custom-logo {
+      display: none;
+      -webkit-transition: all 0.5s ease;
+      transition: all 0.5s ease; }
   .container-fluid.main-header.fixed div.cont-info-header {
     color: #ffffff;
     height: 100px;
