--- a/app/wp-content/themes/main-theme/style.css
+++ b/app/wp-content/themes/main-theme/style.css
@@ -2871,6 +2871,101 @@ div.cont-i-wrapper {
       font-family: Nunito;
       color: #989998; }
 
+#sect-top {
+  width: 100vW;
+  height: 100vh;
+  overflow: hidden;
+  padding-top: 150px; }
+  #sect-top div.image-in-sect-top {
+    background-color: #555150;
+    height: 94%;
+    width: 100%;
+    position: relative; }
+    #sect-top div.image-in-sect-top div.text-in-top-wrapper {
+      position: absolute;
+      top: 30%;
+      left: 0px;
+      width: 100%;
+      text-align: center; }
+      #sect-top div.image-in-sect-top div.text-in-top-wrapper a {
+        text-decoration: none; }
+      #sect-top div.image-in-sect-top div.text-in-top-wrapper span.text-in-top-1 {
+        display: block;
+        font-size: 36px;
+        color: #ffffff;
+        text-transform: uppercase; }
+      #sect-top div.image-in-sect-top div.text-in-top-wrapper span.text-in-top-2 {
+        display: block;
+        font-size: 64px;
+        color: #ffffff;
+        text-transform: uppercase;
+        line-height: 60px; }
+      #sect-top div.image-in-sect-top div.text-in-top-wrapper span.text-in-top-3 {
+        display: block;
+        font-size: 36px;
+        color: #ffffff;
+        text-transform: uppercase; }
+      #sect-top div.image-in-sect-top div.text-in-top-wrapper span.text-in-top-button {
+        margin: 60px auto 0px;
+        display: block;
+        font-size: 20px;
+        color: #e2b733;
+        text-transform: uppercase;
+        font-family: Nunito;
+        width: 160px;
+        position: relative; }
+      #sect-top div.image-in-sect-top div.text-in-top-wrapper span.text-in-top-button:before {
+        content: '';
+        display: block;
+        width: 40px;
+        height: 2px;
+        background-color: #e2b733;
+        position: absolute;
+        bottom: -3px;
+        left: 50%;
+        margin-left: -20px;
+        -webkit-transition: all 0.3s ease;
+        transition: all 0.3s ease; }
+      #sect-top div.image-in-sect-top div.text-in-top-wrapper span.text-in-top-button:hover:before {
+        width: 50px;
+        margin-left: -25px; }
+  #sect-top div.image-in-sect-top:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.4); }
+  #sect-top div.projects-in-sect-top {
+    background-color: #111111;
+    height: 150px;
+    position: relative; }
+    #sect-top div.projects-in-sect-top div.offer-wrapper {
+      position: absolute;
+      top: -105px;
+      right: 0px; }
+      #sect-top div.projects-in-sect-top div.offer-wrapper div.offer-value {
+        width: 280px;
+        height: 105px;
+        background-color: rgba(0, 0, 0, 0.5); }
+      #sect-top div.projects-in-sect-top div.offer-wrapper div.offer-button {
+        position: relative;
+        width: 280px;
+        border-width: 35px 0px 0;
+        border-style: solid;
+        border-color: #e2b733 transparent; }
+      #sect-top div.projects-in-sect-top div.offer-wrapper div.offer-button:before {
+        content: "";
+        position: absolute;
+        height: 0;
+        width: 0px;
+        top: 0px;
+        left: 0px;
+        border-width: 30px 140px 0px;
+        border-style: solid;
+        border-color: #e2b733 transparent transparent; }
+
 /*==========  Desktop First Method  ==========*/
 /* Large Devices, Wide Screens */
 @media only screen and (max-width: 1200px) {
