--- a/sass/main-style/style.sass
+++ b/sass/main-style/style.sass
@@ -406,5 +406,108 @@ div.cont-i-wrapper
 
 // FOOTER (finish)
 
+// Top Section (start)
+
+
+#sect-top
+	width: 100vW
+	height: 100vh
+	overflow: hidden
+	padding-top: 150px
+	div.image-in-sect-top
+		background-color: $sub-gray
+		height: 94%
+		width: 100%
+		position: relative
+		div.text-in-top-wrapper
+			position: absolute
+			top: 30%
+			left: 0px
+			width: 100%
+			text-align: center
+			a
+				text-decoration: none
+			span.text-in-top-1
+				display: block
+				font-size: 36px
+				color: $white
+				text-transform: uppercase
+			span.text-in-top-2
+				display: block
+				font-size: 64px
+				color: $white
+				text-transform: uppercase
+				line-height: 60px;
+			span.text-in-top-3
+				display: block
+				font-size: 36px
+				color: $white
+				text-transform: uppercase
+			span.text-in-top-button
+				margin: 60px auto 0px
+				display: block
+				font-size: 20px
+				color: $gold
+				text-transform: uppercase
+				font-family: Nunito
+				width: 160px
+				position: relative
+			span.text-in-top-button:before
+				content: ''
+				display: block
+				width: 40px
+				height: 2px
+				background-color: $gold
+				position: absolute
+				bottom: -3px
+				left: 50%
+				margin-left: -20px
+				@include transition(0.3s)
+			span.text-in-top-button:hover:before
+				width: 50px
+				margin-left: -25px
+	div.image-in-sect-top:before
+		content: ''
+		position: absolute
+		top: 0
+		left: 0
+		width: 100%
+		height: 100%
+		background-color: rgba(0, 0, 0, 0.4)
+	div.projects-in-sect-top
+		background-color: $gray
+		height: 150px
+		position: relative
+		div.offer-wrapper
+			position: absolute
+			top: -105px
+			right: 0px
+			div.offer-value
+				width: 280px
+				height: 105px
+				background-color: rgba(0, 0, 0, 0.5)
+			div.offer-button
+				position: relative
+				width: 280px
+				border-width: 35px 0px 0
+				border-style: solid
+				border-color: $gold transparent
+			div.offer-button:before
+				content: ""
+				position: absolute
+				height: 0
+				width: 0px
+				top: 0px
+				left: 0px
+				border-width: 30px 140px 0px
+				border-style: solid
+				border-color: $gold transparent transparent
+
+
+
+
+
+// Top Section (finish)
+
 //ALWAYS END
 @import "../media"
