--- a/sass/main-style/style.sass
+++ b/sass/main-style/style.sass
@@ -571,5 +571,29 @@ div.cont-i-wrapper
 
 // Latest Projects (finish)
 
+// OTHER PAGES (start)
+
+// OTHER Top Block (start)
+
+#sect-top-mini
+	background-color: $sub-gray
+	padding-top: 230px
+	padding-bottom: 85px
+
+
+
+
+// OTHER Top Block (finish)
+
+// PAGE PARTNERS (start)
+
+
+
+// PAGE PARTNERS (finish)
+
+
+// OTHER PAGES (finish)
+
+
 //ALWAYS END
 @import "../media"
