--- a/sass/main-style/style.sass
+++ b/sass/main-style/style.sass
@@ -55,6 +55,9 @@ section
 .m-15
 	margin: 15px
 
+.m-0
+	margin: 0px
+
 .height-100
 	height: 100%
 
@@ -83,7 +86,7 @@ div.service-wrapper
 	background-color: $sub-gray
 	div.service-value
 		height: 100px
-		background-color: $gray
+		background-color: rgba(0, 0, 0, 0.5)
 		div.service-text
 			color: $white
 			font-size: 32px
@@ -579,18 +582,128 @@ div.cont-i-wrapper
 	background-color: $sub-gray
 	padding-top: 230px
 	padding-bottom: 85px
+	a
+		text-decoration: none
+	div.category-heading
+		font-family: Montserrat
+		font-size: 42px
+		text-transform: uppercase
+		color: #ffffff
+	span.text-in-top-button
+		font-family: Montserrat
+		font-size: 14px
+		text-transform: uppercase
+		color: #ffffff
+		position: relative
+	span.text-in-top-button:before
+		content: ''
+		display: block
+		width: 26px
+		height: 2px
+		background-color: $gold
+		position: absolute
+		bottom: -6px
+		left: 0px
+
+		@include transition(0.3s)
+	span.text-in-top-button:hover:before
+		width: 40px
 
 
 
 
 // OTHER Top Block (finish)
 
+// OTHER Sidebar (start)
+
+
+div.sidebar-wrapper
+	li
+		list-style-type: none
+		font-family: Montserrat
+		font-size: 14px
+		text-transform: uppercase
+		@include transition(0.5s)
+		a
+			text-decoration: none
+			color: $gray
+			display: block
+			padding: 9px 18px
+			@include transition(0.5s)
+	li:hover
+		background-color: $gray
+		a
+			text-decoration: none
+			color: $gold
+			
+				
+
+
+
+// OTHER Sidebar (finish)
+
 // PAGE PARTNERS (start)
 
+#sect-page-partners
+	h1.heading-page
+		font-size: 48px
+		text-align: left
+		color: $gray
+		margin-bottom: 30px
+	div.text-page
+		width: 775px
+		color: $sub-gray
+		font-size: 16px
+		line-height: 1.63
+		text-align: justify
+		font-family: Nunito
+	div.partners-repeater
+		div.partner-wrapper
+			margin: 15px 0px
+			img
+				width: 200px
+				height: 100%
+				margin-top: 10px
+			div.name-partner
+				font-size: 18px
+				font-weight: bold
+				color: $gray
+				margin-bottom: 10px
+			div.desc-partner
+				font-family: Nunito
+				font-size: 16px
+				line-height: 1.63
+				text-align: justify
+				color: $sub-gray
 
 
 // PAGE PARTNERS (finish)
 
+// PAGE SERVISES (start)
+
+#sect-page-servises
+	h1.heading-page
+		font-size: 48px
+		text-align: center
+		color: $gray
+		margin: 0 auto
+	.m-b-30
+		margin-bottom: 30px
+	div.text-page
+		width: 830px
+		color: $sub-gray
+		font-size: 16px
+		line-height: 1.63
+		text-align: center
+		font-family: Nunito
+		margin: 0 auto
+	.m-b-60
+		margin-bottom: 60px
+	a
+		text-decoration: none
+
+
+// PAGE SERVISES (finish)
 
 // OTHER PAGES (finish)
 
