--- a/sass/main-style/style.sass
+++ b/sass/main-style/style.sass
@@ -676,6 +676,31 @@ div.sidebar-wrapper
 				text-align: justify
 				color: $sub-gray
 
+#sect-partners
+	h1.heading-page
+		font-size: 48px
+		text-align: left
+		color: $gray
+		margin-bottom: 20px
+	div.text-page
+		width: 775px
+		color: $sub-gray
+		font-size: 16px
+		line-height: 1.63
+		text-align: left
+		font-family: Nunito
+	.pad-l-30
+		padding-left: 30px
+	.mar-15
+		margin-bottom: 20px
+	.pad-l-50
+		padding-left: 50px
+	img
+		width: 250px
+		height: 100%
+		margin-top: 10px
+		filter: grayscale(100%)
+
 
 // PAGE PARTNERS (finish)
 
@@ -698,7 +723,7 @@ div.sidebar-wrapper
 		font-family: Nunito
 		margin: 0 auto
 	.m-b-60
-		margin-bottom: 60px
+		margin-bottom: 40px
 	a
 		text-decoration: none
 
